--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <div class="container">
       <h1>Refresh Me</h1>
+      <h3>Refresh to play again </h3>
 
       <div class="dice">
         <p>Player 1</p>
